--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -36,6 +36,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "\n",
+    "# X shoudl be a numpy matrix, very likely sparse matrix: http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.sparse.csr_matrix.html#scipy.sparse.csr_matrix\n",
+    "# T1 > T2 for overlapping clusters\n",
+    "# T1 = Distance to centroid point to not include in other clusters\n",
+    "# T2 = Distance to centroid point to include in cluster\n",
+    "# T1 > T2 for overlapping clusters\n",
+    "# T1 < T2 will have points which reside in no clusters\n",
+    "# T1 == T2 will cause all points to reside in mutually exclusive clusters\n",
+    "# Distance metric can be any from here: http://scikit-learn.org/stable/modules/generated/sklearn.metrics.pairwise.pairwise_distances.html\n",
+    "# filemap may be a list of point names in their order in X. If included, row numbers from X will be replaced with names from filemap. \n",
+    " \n",
+    "def canopy(X, T1, T2, distance_metric='euclidean', filemap=None):\n",
+    "    canopies = dict()\n",
+    "    X1_dist = pairwise_distances(X, metric=distance_metric)\n",
+    "    canopy_points = set(range(X.shape[0]))\n",
+    "    while canopy_points:\n",
+    "        point = canopy_points.pop()\n",
+    "        i = len(canopies)\n",
+    "        canopies[i] = {\"c\":point, \"points\": list(np.where(X1_dist[point] < T2)[0])}\n",
+    "        canopy_points = canopy_points.difference(set(np.where(X1_dist[point] < T1)[0]))\n",
+    "    if filemap:\n",
+    "        for canopy_id in canopies.keys():\n",
+    "            canopy = canopies.pop(canopy_id)\n",
+    "            canopy2 = {\"c\":filemap[canopy['c']], \"points\":list()}\n",
+    "            for point in canopy['points']:\n",
+    "                canopy2[\"points\"].append(filemap[point])\n",
+    "            canopies[canopy_id] = canopy2\n",
+    "    return canopies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def euclideanDistance(vector1, vector2):\n",
     "        #print(vector1)\n",
     "        #print(vector2)\n",
@@ -45,23 +82,38 @@
     "        #print(row_center)\n",
     "        row_center = np.asarray(row_center)\n",
     "        #row_center = np.asarray(row_sample)\n",
-    "        return euclideanDistance(row_center, row_sample)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = [\"datasets/soybean-small.data\", \"datasets/wine.data\"]\n",
-    "ks = [4,13]\n",
-    "kmeansTypes = [\"random\", \"k-means++\"]"
+    "        return euclideanDistance(row_center, row_sample)\n",
+    "\n",
+    "def getSquaredError(data, kmeans):\n",
+    "    distances = []\n",
+    "    for i in range(k): # Qtd de clusters\n",
+    "        distance = 0\n",
+    "        for index_labels, value_labels in enumerate(kmeans.labels_): #kmeans.labels_ possui a que cluster cada elemento pertence\n",
+    "            if (i == value_labels):\n",
+    "                #print(value_labels)\n",
+    "                distance = distance + getDistance(kmeans.cluster_centers_[value_labels], data.loc[index_labels].values)\n",
+    "        \n",
+    "        distances.append(distance) #Erro quadratico medio de cada cluster\n",
+    "    \n",
+    "    distances = np.asarray(distances)\n",
+    "    error = np.sum(distances)\n",
+    "    return error"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [\"soybean-small\", \"iris\", \"wine\",  \"segmentation\", \"ionosphere\"]\n",
+    "ks = [4,3,3,7,2]\n",
+    "kmeansTypes = [\"random\", \"k-means++\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -71,19 +123,67 @@
      "output_type": "stream",
      "text": [
       "--------- random test ---------\n",
+      "\n",
+      "----- soybean-small -----\n",
+      "\n",
       "(47, 36)\n",
       "Erro quadrático médio:  100.72984563120583\n",
-      "[0.03965282440185547]\n",
+      "[0.04618334770202637]\n",
+      "\n",
+      "----- iris -----\n",
+      "\n",
+      "(150, 5)\n",
+      "Erro quadrático médio:  97.32592423430009\n",
+      "[0.029637575149536133]\n",
+      "\n",
+      "----- wine -----\n",
+      "\n",
       "(178, 14)\n",
-      "Erro quadrático médio:  707.3637730622032\n",
-      "[0.05330681800842285]\n",
+      "Erro quadrático médio:  1172.244025611532\n",
+      "[0.03351593017578125]\n",
+      "\n",
+      "----- segmentation -----\n",
+      "\n",
+      "(210, 20)\n",
+      "Erro quadrático médio:  12560.705081729095\n",
+      "[0.04107499122619629]\n",
+      "\n",
+      "----- ionosphere -----\n",
+      "\n",
+      "(351, 35)\n",
+      "Erro quadrático médio:  796.4666759281233\n",
+      "[0.07623004913330078]\n",
       "--------- k-means++ test ---------\n",
+      "\n",
+      "----- soybean-small -----\n",
+      "\n",
       "(47, 36)\n",
       "Erro quadrático médio:  96.99203638192614\n",
-      "[0.00933074951171875]\n",
+      "[0.02254343032836914]\n",
+      "\n",
+      "----- iris -----\n",
+      "\n",
+      "(150, 5)\n",
+      "Erro quadrático médio:  97.34621969415683\n",
+      "[0.022031545639038086]\n",
+      "\n",
+      "----- wine -----\n",
+      "\n",
       "(178, 14)\n",
-      "Erro quadrático médio:  674.4328770176052\n",
-      "[0.04040861129760742]\n"
+      "Erro quadrático médio:  1229.8611046177025\n",
+      "[0.03346872329711914]\n",
+      "\n",
+      "----- segmentation -----\n",
+      "\n",
+      "(210, 20)\n",
+      "Erro quadrático médio:  12803.146726880273\n",
+      "[0.04660511016845703]\n",
+      "\n",
+      "----- ionosphere -----\n",
+      "\n",
+      "(351, 35)\n",
+      "Erro quadrático médio:  796.4666759281233\n",
+      "[0.06407880783081055]\n"
      ]
     }
    ],
@@ -93,31 +193,34 @@
     "    print (\"--------- \"+ kmeansType +\" test ---------\")\n",
     "    \n",
     "    for index, file in enumerate(files):\n",
-    "        data = pd.read_csv(file, header=None)\n",
+    "        print (\"\\n----- \"+file+\" -----\\n\")\n",
+    "        data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
     "        print (data.shape)\n",
-    "        target = data.iloc[:,-1]\n",
-    "        data = data.iloc[:,:-1]\n",
+    "\n",
     "        #display(data.head())\n",
-    "    \n",
+    "        if file == \"segmentation\": #Target eh na primeira coluna\n",
+    "            target = data.iloc[:,0]\n",
+    "            data = data.iloc[:,1:]\n",
+    "            \n",
+    "            \n",
+    "        else: #Target na última coluna\n",
+    "            target = data.iloc[:,-1]\n",
+    "            data = data.iloc[:,:-1]\n",
+    "        \n",
     "        clustering_times = []\n",
     "        start = time()\n",
     "        k = ks[index]\n",
     "        kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
-    "    \n",
-    "        distances = []\n",
-    "        for i in range(k): # Qtd de clusters\n",
-    "            distance = 0\n",
-    "            for index_labels, value_labels in enumerate(kmeans.labels_): #kmeans.labels_ possui a que cluster cada elemento pertence\n",
-    "                if (i == value_labels):\n",
-    "                    #print(value_labels)\n",
-    "                    distance = distance + getDistance(kmeans.cluster_centers_[value_labels], data.loc[index_labels].values)\n",
     "        \n",
-    "            distances.append(distance) #Erro quadratico medio de cada cluster\n",
-    "    \n",
-    "        distances = np.asarray(distances)\n",
-    "        error = np.sum(distances)\n",
-    "        #print(kmeans.labels_)\n",
+    "        error = getSquaredError(data, kmeans)\n",
+    "        \n",
+    "        \n",
+    "                #print(kmeans.labels_)\n",
     "        end = time()\n",
+    "        T1 = error/(data.shape[0])\n",
+    "        T2 = error/(data.shape[0]/2)\n",
+    "        \n",
+    "        #print(canopy(data.values, T1, T2))\n",
     "        print(\"Erro quadrático médio: \",error)\n",
     "        clustering_times.append(end - start)\n",
     "        print(clustering_times)\n",
@@ -126,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
