--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -106,6 +106,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -------------- Density Canopy -------------- #\n",
+    "\n",
+    "def MeanDis(D): #Definition 1\n",
+    "    n = D.shape[0]\n",
+    "    meanDis = 0\n",
+    "    \n",
+    "    for i, row_i in D.iterrows():\n",
+    "        for j, row_j in D.iloc[i+1:].iterrows():\n",
+    "            \n",
+    "            meanDis = meanDis + euclideanDistance(row_i, row_j)\n",
+    "            \n",
+    "    meanDis = (2/(n*(n-1))) * meanDis\n",
+    "    return meanDis\n",
+    "\n",
+    "def getDensitys(D): #Definition 2\n",
+    "    meanDis = MeanDis(D)\n",
+    "    print (\"Distancia média:\", meanDis)\n",
+    "    df = pd.DataFrame(np.nan, index=range(D.shape[0]), columns=['density']) #Criando DataFrame vazio\n",
+    "    #display(df.tail())\n",
+    "    for i, row_i in D.iterrows():\n",
+    "        aux = 0\n",
+    "        for j, row_j in D.iterrows():\n",
+    "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
+    "                aux = aux + 1\n",
+    "        df.loc[i] = aux\n",
+    "    \n",
+    "    #display(df.head(20))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "files = [\"soybean-small\", \"iris\", \"wine\",  \"segmentation\", \"ionosphere\"]\n",
     "ks = [4,3,3,7,2]\n",
     "kmeansTypes = [\"random\", \"k-means++\"]"
@@ -113,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -127,63 +163,73 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
+      "Distancia média: 5.186705273500234\n",
       "Erro quadrático médio:  100.72984563120583\n",
-      "[0.04618334770202637]\n",
+      "[0.028822898864746094]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
+      "Distancia média: 2.5437692122517013\n",
       "Erro quadrático médio:  97.32592423430009\n",
-      "[0.029637575149536133]\n",
+      "[0.02134394645690918]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
+      "Distancia média: 17.468877956672003\n",
       "Erro quadrático médio:  1172.244025611532\n",
-      "[0.03351593017578125]\n",
+      "[0.034499406814575195]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
+      "Distancia média: 185.4874269607976\n",
       "Erro quadrático médio:  12560.705081729095\n",
-      "[0.04107499122619629]\n",
+      "[0.04155707359313965]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
+      "Distancia média: 3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.07623004913330078]\n",
+      "[0.0800473690032959]\n",
       "--------- k-means++ test ---------\n",
       "\n",
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
+      "Distancia média: 5.186705273500234\n",
       "Erro quadrático médio:  96.99203638192614\n",
-      "[0.02254343032836914]\n",
+      "[0.008984565734863281]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
+      "Distancia média: 2.5437692122517013\n",
       "Erro quadrático médio:  97.34621969415683\n",
-      "[0.022031545639038086]\n",
+      "[0.021354198455810547]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
+      "Distancia média: 17.468877956672003\n",
       "Erro quadrático médio:  1229.8611046177025\n",
-      "[0.03346872329711914]\n",
+      "[0.03506875038146973]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
+      "Distancia média: 185.4874269607976\n",
       "Erro quadrático médio:  12803.146726880273\n",
-      "[0.04660511016845703]\n",
+      "[0.04261922836303711]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
+      "Distancia média: 3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.06407880783081055]\n"
+      "[0.1028439998626709]\n"
      ]
     }
    ],
@@ -207,6 +253,8 @@
     "            target = data.iloc[:,-1]\n",
     "            data = data.iloc[:,:-1]\n",
     "        \n",
+    "        \n",
+    "        getDensitys(data)\n",
     "        clustering_times = []\n",
     "        start = time()\n",
     "        k = ks[index]\n",
@@ -229,12 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#kmeans.cluster_centers_"
+    "#usando numpy em vez do pandas pode tornar mais rápido pra essas operações"
    ]
   },
   {
