Definition1 and 2 in numpy

--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -108,26 +108,30 @@
    "source": [
     "# -------------- Density Canopy -------------- #\n",
     "\n",
-    "def MeanDis(D): #Definition 1\n",
+    "def MeanDis(D):\n",
+    "    #OBS enumerate com numpy mto mais rápido que iterrows\n",
     "    n = D.shape[0]\n",
+    "    D = D.values\n",
     "    meanDis = 0\n",
     "    \n",
-    "    for i, row_i in D.iterrows():\n",
-    "        for j, row_j in D.iloc[i+1:].iterrows():\n",
+    "    for i, row_i in enumerate(D):\n",
+    "        for j, row_j in enumerate(D[i+1:,]):\n",
     "            \n",
     "            meanDis = meanDis + euclideanDistance(row_i, row_j)\n",
     "            \n",
     "    meanDis = (2/(n*(n-1))) * meanDis\n",
+    "    \n",
     "    return meanDis\n",
-    "\n",
     "def getDensitys(D): #Definition 2\n",
+    "    \n",
     "    meanDis = MeanDis(D)\n",
-    "    print (\"Distancia média:\", meanDis)\n",
+    "    print (\"Distância média: \", meanDis)\n",
     "    df = pd.DataFrame(np.nan, index=range(D.shape[0]), columns=['density']) #Criando DataFrame vazio\n",
     "    #display(df.tail())\n",
-    "    for i, row_i in D.iterrows():\n",
+    "    D = D.values\n",
+    "    for i, row_i in enumerate(D):\n",
     "        aux = 0\n",
-    "        for j, row_j in D.iterrows():\n",
+    "        for j, row_j in enumerate(D):\n",
     "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
     "                aux = aux + 1\n",
     "        df.loc[i] = aux\n",
@@ -163,73 +167,73 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "Distancia média: 5.186705273500234\n",
+      "Distância média:  5.186705273500234\n",
       "Erro quadrático médio:  100.72984563120583\n",
-      "[0.028822898864746094]\n",
+      "[0.028558731079101562]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "Distancia média: 2.5437692122517013\n",
+      "Distância média:  2.5437692122517013\n",
       "Erro quadrático médio:  97.32592423430009\n",
-      "[0.02134394645690918]\n",
+      "[0.03437304496765137]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "Distancia média: 17.468877956672003\n",
+      "Distância média:  17.468877956672003\n",
       "Erro quadrático médio:  1172.244025611532\n",
-      "[0.034499406814575195]\n",
+      "[0.04710268974304199]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
-      "Distancia média: 185.4874269607976\n",
+      "Distância média:  185.4874269607976\n",
       "Erro quadrático médio:  12560.705081729095\n",
-      "[0.04155707359313965]\n",
+      "[0.056040287017822266]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "Distancia média: 3.9918803461829198\n",
+      "Distância média:  3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.0800473690032959]\n",
+      "[0.06422615051269531]\n",
       "--------- k-means++ test ---------\n",
       "\n",
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "Distancia média: 5.186705273500234\n",
+      "Distância média:  5.186705273500234\n",
       "Erro quadrático médio:  96.99203638192614\n",
-      "[0.008984565734863281]\n",
+      "[0.009288311004638672]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "Distancia média: 2.5437692122517013\n",
+      "Distância média:  2.5437692122517013\n",
       "Erro quadrático médio:  97.34621969415683\n",
-      "[0.021354198455810547]\n",
+      "[0.0330960750579834]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "Distancia média: 17.468877956672003\n",
+      "Distância média:  17.468877956672003\n",
       "Erro quadrático médio:  1229.8611046177025\n",
-      "[0.03506875038146973]\n",
+      "[0.042189836502075195]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
-      "Distancia média: 185.4874269607976\n",
+      "Distância média:  185.4874269607976\n",
       "Erro quadrático médio:  12803.146726880273\n",
-      "[0.04261922836303711]\n",
+      "[0.051758527755737305]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "Distancia média: 3.9918803461829198\n",
+      "Distância média:  3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.1028439998626709]\n"
+      "[0.11827206611633301]\n"
      ]
     }
    ],
