Definition1 and 2 in numpy

--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -126,7 +126,9 @@
     "    \n",
     "    meanDis = MeanDis(D)\n",
     "    print (\"Distância média: \", meanDis)\n",
-    "    df = pd.DataFrame(np.nan, index=range(D.shape[0]), columns=['density']) #Criando DataFrame vazio\n",
+    "    #df = pd.DataFrame(np.nan, index=range(D.shape[0]), columns=['density']) #Criando DataFrame vazio\n",
+    "    densitys = np.zeros(D.shape[0], dtype=int)\n",
+    "    \n",
     "    #display(df.tail())\n",
     "    D = D.values\n",
     "    for i, row_i in enumerate(D):\n",
@@ -134,8 +136,8 @@
     "        for j, row_j in enumerate(D):\n",
     "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
     "                aux = aux + 1\n",
-    "        df.loc[i] = aux\n",
-    "    \n",
+    "        densitys[i] = aux\n",
+    "    df = pd.DataFrame(data= densitys, columns=[\"density\"])\n",
     "    #display(df.head(20))\n",
     "    return df"
    ]
@@ -169,35 +171,35 @@
       "(47, 36)\n",
       "Distância média:  5.186705273500234\n",
       "Erro quadrático médio:  100.72984563120583\n",
-      "[0.028558731079101562]\n",
+      "[0.03607463836669922]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
       "Distância média:  2.5437692122517013\n",
       "Erro quadrático médio:  97.32592423430009\n",
-      "[0.03437304496765137]\n",
+      "[0.022112131118774414]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
       "Distância média:  17.468877956672003\n",
       "Erro quadrático médio:  1172.244025611532\n",
-      "[0.04710268974304199]\n",
+      "[0.07616901397705078]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
       "Distância média:  185.4874269607976\n",
       "Erro quadrático médio:  12560.705081729095\n",
-      "[0.056040287017822266]\n",
+      "[0.04128885269165039]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
       "Distância média:  3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.06422615051269531]\n",
+      "[0.06887102127075195]\n",
       "--------- k-means++ test ---------\n",
       "\n",
       "----- soybean-small -----\n",
@@ -205,35 +207,35 @@
       "(47, 36)\n",
       "Distância média:  5.186705273500234\n",
       "Erro quadrático médio:  96.99203638192614\n",
-      "[0.009288311004638672]\n",
+      "[0.009531736373901367]\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
       "Distância média:  2.5437692122517013\n",
       "Erro quadrático médio:  97.34621969415683\n",
-      "[0.0330960750579834]\n",
+      "[0.021063804626464844]\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
       "Distância média:  17.468877956672003\n",
       "Erro quadrático médio:  1229.8611046177025\n",
-      "[0.042189836502075195]\n",
+      "[0.03413200378417969]\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
       "Distância média:  185.4874269607976\n",
       "Erro quadrático médio:  12803.146726880273\n",
-      "[0.051758527755737305]\n",
+      "[0.04281044006347656]\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
       "Distância média:  3.9918803461829198\n",
       "Erro quadrático médio:  796.4666759281233\n",
-      "[0.11827206611633301]\n"
+      "[0.06533145904541016]\n"
      ]
     }
    ],
