add function a, rewrite other, organizing code

--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparar KMeans \"puro\" com KMeans com Improved Density Canopy\n",
+    "Comparar KMeans com Improved Density Canopy com KMeans \"puro\" e outras variações.\n",
     "\n",
     "Métricas erro Quadrático médio\n",
-    "\n",
-    "Quando bancos de dados UCI usar?\n",
     "\n",
     "1. Calcular MeanDis de cada elemento\n",
     "2. Calcular densidade de cada elemento\n",
@@ -27,7 +25,8 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics.pairwise import pairwise_distances"
    ]
   },
   {
@@ -36,8 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import pairwise_distances\n",
-    "\n",
     "# X shoudl be a numpy matrix, very likely sparse matrix: http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.sparse.csr_matrix.html#scipy.sparse.csr_matrix\n",
     "# T1 > T2 for overlapping clusters\n",
     "# T1 = Distance to centroid point to not include in other clusters\n",
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,173 +99,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = pd.read_csv(\"datasets/iris.data\", header=None)\n",
+    "# target = data.iloc[:,-1]\n",
+    "# data = data.iloc[:,:-1]\n",
+    "# meanDis = mean_dist(data)\n",
+    "# den = get_densities(data, meanDis)\n",
+    "# As = cluser_dist_mean(data, den, meanDis)\n",
+    "# clusters_dist(data, den)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------- Density Canopy -------------- #\n",
     "\n",
-    "def MeanDis(D):\n",
-    "    #OBS enumerate com numpy mto mais rápido que iterrows\n",
+    "# Definition 1\n",
+    "#OBS.: enumerate com numpy mto mais rápido que iterrows\n",
+    "def mean_dist(D):\n",
     "    n = D.shape[0]\n",
     "    D = D.values\n",
-    "    meanDis = 0\n",
-    "    \n",
+    "    sum_D = np.zeros((n, n))\n",
     "    for i, row_i in enumerate(D):\n",
     "        for j, row_j in enumerate(D[i+1:,]):\n",
-    "            \n",
-    "            meanDis = meanDis + euclideanDistance(row_i, row_j)\n",
-    "            \n",
-    "    meanDis = (2/(n*(n-1))) * meanDis\n",
-    "    \n",
-    "    return meanDis\n",
-    "def getDensitys(D, meanDis): #Definition 2\n",
-    "    \n",
-    "    densitys = np.zeros(D.shape[0], dtype=int)\n",
-    "    \n",
-    "    auxD = D.values\n",
-    "    \n",
-    "    for i, row_i in enumerate(auxD):\n",
-    "        aux = 0\n",
-    "        for j, row_j in enumerate(auxD):\n",
-    "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
-    "                aux = aux + 1\n",
-    "        densitys[i] = aux\n",
-    "    df = pd.DataFrame(data= densitys, columns=[\"density\"])\n",
+    "            sum_D[i][j] = euclideanDistance(row_i, row_j)\n",
+    "    return (2/(n*(n-1))) * np.sum(sum_D)\n",
     "\n",
+    "# Definition 2\n",
+    "def get_densities(D, meanDis):\n",
+    "    densities = np.zeros(D.shape[0], dtype=int)\n",
+    "    aux_D = D.values\n",
+    "    for i, row_i in enumerate(aux_D):\n",
+    "        for j, row_j in enumerate(aux_D):\n",
+    "            if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
+    "                densities[i] += 1\n",
+    "    df = pd.DataFrame(data=densities, columns=[\"density\"])\n",
     "    return df\n",
     "\n",
-    "def getAs(auxD, new_densitys, meanDis):  #Definition 3 NAO ESTÁ CLARO NO ARTIGO\n",
-    "    a = []\n",
-    "    densitys = new_densitys.copy().values\n",
-    "    for i, row_i in enumerate(auxD.values): # confirmar o valor do somatório\n",
-    "        aux = 0\n",
-    "        for j, row_j in enumerate(auxD.values ):\n",
-    "            if euclideanDistance(row_i, row_j) - meanDis < 0: #Somente dos elementos que pertencem ao cluster\n",
-    "                aux = aux + euclideanDistance(row_i, row_j)\n",
-    "        if (densitys[i] -1== 0): #So tem 1 elemento\n",
-    "            aux = 1\n",
-    "        else:\n",
-    "            aux = (2/(densitys[i] * (densitys[i] -1))) * aux # calculo de a(i)\n",
-    "        #print(densitys[i])\n",
-    "        a.append(aux)\n",
+    "#Definition 3\n",
+    "def cluser_dist_mean(D, densities, meanDis):\n",
+    "    a = np.zeros(D.shape[0])\n",
+    "    densities_aux = densities.copy().values\n",
+    "    for i, row_i in enumerate(D.values):\n",
+    "        sum_dists = 0\n",
+    "        for j, row_j in enumerate(D.values):\n",
+    "            dist = euclideanDistance(row_i, row_j)\n",
+    "            if dist - meanDis < 0:\n",
+    "                sum_dists += dist\n",
+    "        a[i] = (2/(densities_aux[i]*(densities_aux[i]-1))) * sum_dists\n",
     "    return a\n",
     "\n",
-    "def getSs(auxD, new_densitys):  #Definition 4\n",
+    "#Definition 4\n",
+    "def clusters_dist(D, densities):\n",
     "    s = []\n",
-    "    densitys = new_densitys.values\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    for i, row_i in enumerate(auxD.values):\n",
+    "    densities_aux = densities.values\n",
+    "    for i, row_i in enumerate(D.values):\n",
     "        maxDist = 0\n",
     "        minDist = float(\"inf\")\n",
     "        dist = 0\n",
-    "        flag = 0 #Se flag =0 entao min dist, se flag =1 retornar max dist\n",
-    "        \n",
-    "        for j, row_j in enumerate(auxD.values):\n",
-    "            \n",
+    "        flag = 1 #Se flag=0 entao min dist, se flag=1 retornar max dist\n",
+    "        for j, row_j in enumerate(D.values):\n",
     "            dist = euclideanDistance(row_i, row_j)\n",
-    "            \n",
-    "            if (dist > maxDist):\n",
-    "                maxDist = dist\n",
-    "            if (dist < minDist):\n",
-    "                minDist = dist\n",
-    "                \n",
-    "                \n",
-    "            if densitys[j] == np.amax(densitys): #Se a densidade  for a maxima quer dizer que p(j) == p(i)\n",
-    "                flag = 1\n",
-    "        \n",
+    "            if densities_aux[j] > densities_aux[i]:\n",
+    "                flag = 0\n",
+    "                if (dist < minDist):\n",
+    "                    minDist = dist\n",
+    "            else:\n",
+    "                if (dist > maxDist):\n",
+    "                    maxDist = dist\n",
+    "#             if densities[j] == np.amax(densities):\n",
+    "#                 flag = 1\n",
     "        if flag == 1:\n",
     "            s.append(maxDist)\n",
     "        else: # p(j) > p(i)\n",
     "            s.append(minDist)\n",
-    "    #print (s)\n",
     "    return s\n",
-    "                #print(np.amax(densitys))\n",
+    "\n",
+    "# Definition 6\n",
+    "def product_weight(p, a, s):\n",
+    "    w = []\n",
+    "    for i, row_i in enumerate(p):\n",
+    "        w.append(p[i] * (1/a[i]) * s[i])\n",
+    "    return w\n",
     "        \n",
-    "def getCenter(D, meanDis,firstExecution = True, index=None): \n",
-    "    auxD = D.copy()\n",
-    "    \n",
-    "    df = getDensitys(D, meanDis)\n",
-    "    \n",
+    "def getCluster(D, meanDis, firstExecution=True, index=None): \n",
+    "    aux_D = D.copy()\n",
+    "    df = get_densities(D, meanDis)\n",
     "    if (firstExecution == True): #Primeira execução pega o de maior densidade\n",
-    "        rows = D.iloc[df.idxmax(axis = 0)].values \n",
-    "        for row in rows:\n",
-    "            row_i = row #apenas pra ficar no formato correto\n",
-    "            \n",
-    "    else :\n",
-    "        #print(index)\n",
+    "        rows = D.iloc[df.idxmax(axis=0)].values\n",
+    "        row_i = rows[-1] #pegando o último index com maior peso, caso tenha mais de 1\n",
+    "    else:\n",
     "        row_i = D.iloc[index].values #pegando index passado, no caso o com maior peso\n",
-    "        \n",
     "    cluster = []\n",
-    "    \n",
-    "    for j, row_j in enumerate(auxD.values):\n",
+    "    for j, row_j in enumerate(aux_D.values):\n",
     "        if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
     "            cluster.append(j)\n",
-    "            \n",
     "    #print (cluster)\n",
-    "    \n",
     "    #auxD.drop(cluster, inplace=True)\n",
     "    #display(auxD)\n",
-    "    return row_i, cluster # Elemento central e cluster\n",
-    "def removeOutliers(auxD, densitys, s, meanDis ):\n",
+    "    return row_i, cluster #Elemento central e cluster\n",
+    "\n",
+    "def removeOutliers(aux_D, densities, s, meanDis):\n",
     "    #remove elemento com densidade = 1 e que o s[i] seja maior que o raio\n",
     "    outliers = []\n",
-    "    for i, row_i in enumerate(auxD.values):\n",
-    "        if densitys[i] == 1 and s[i] > meanDis:\n",
+    "    for i, row_i in enumerate(aux_D.values):\n",
+    "        if densities[i] == 1 and s[i] > meanDis:\n",
     "            outliers.append(i)\n",
-    "    #print(\"outliers: \", outliers)\n",
-    "    \n",
-    "    auxD.drop(outliers, inplace=True) #removendo outliers\n",
-    "    auxD.reset_index(drop=True, inplace=True)\n",
-    "    \n",
-    "    densitys = np.delete(densitys, outliers, 0)\n",
+    "    aux_D.drop(outliers, inplace=True) #removendo outliers\n",
+    "    aux_D.reset_index(drop=True, inplace=True)\n",
+    "    densities = np.delete(densities, outliers, 0)\n",
     "    s = np.delete(s, outliers, 0)\n",
-    "    \n",
-    "    return auxD, densitys, s\n",
+    "    return aux_D, densities, s\n",
     "\n",
-    "def getWeight(D):\n",
-    "    \n",
-    "    meanDis = MeanDis(D)\n",
+    "def run(D):\n",
+    "    meanDis = mean_dist(D)\n",
     "    centers, cluster = getCenter(D, meanDis)\n",
     "    centers = np.array([centers])\n",
-    "    \n",
-    "    auxD = D.copy()\n",
-    "    \n",
-    "    auxD.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
-    "    auxD.reset_index(drop=True, inplace=True)\n",
-    "    \n",
-    "    while (not auxD.empty) :\n",
-    "\n",
-    "        new_densitys = getDensitys(auxD, meanDis)\n",
-    "    \n",
-    "        a = getAs(auxD, new_densitys, meanDis) #mantem-se meanDis\n",
-    "    \n",
-    "        s = getSs(auxD, new_densitys)\n",
-    "    \n",
-    "        densitys = new_densitys.values\n",
-    "\n",
-    "        auxD, densitys, s = removeOutliers(auxD, densitys, s, meanDis)\n",
-    "    \n",
-    "        weight = 0\n",
-    "        aux_index = None\n",
-    "        for i, row_i in enumerate(auxD.values):\n",
-    "            if (densitys[i] * (1/a[i]) * s[i]) > weight:\n",
-    "                weight = densitys[i] * (1/a[i]) * s[i]\n",
-    "                print(\"densidade: \",densitys[i], \"a: \", a[i], \"s: \",s[i], \"weight: \", weight)\n",
-    "                aux_index = i\n",
-    "        #print(aux_index)\n",
-    "        aux_center, cluster = getCenter(auxD, meanDis, firstExecution=False, index= aux_index)\n",
-    "    \n",
+    "    aux_D = D.copy()\n",
+    "    aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
+    "    aux_D.reset_index(drop=True, inplace=True)\n",
+    "    while (not auxD.empty):\n",
+    "        new_densities = get_densities(aux_D, meanDis)\n",
+    "        a = cluser_dist_mean(aux_D, new_densities, meanDis) #mantem-se meanDis\n",
+    "        s = clusters_dist(aux_D, new_densities)\n",
+    "        densities = new_densities.values\n",
+    "        aux_D, densities, s = removeOutliers(aux_D, densities, s, meanDis)\n",
+    "        aux_index = np.argmax(product_weight(densities, a, s))\n",
+    "#         for i, row_i in enumerate(aux_D.values):\n",
+    "#             if (densities[i] * (1/a[i]) * s[i]) > weight:\n",
+    "#                 weight = densities[i] * (1/a[i]) * s[i]\n",
+    "#                 print(\"densidade: \", densities[i], \"a: \", a[i], \"s: \", s[i], \"weight: \", weight)\n",
+    "#                 aux_index = i\n",
+    "        aux_center, cluster = getCenter(aux_D, meanDis, firstExecution=False, index=aux_index)\n",
     "        aux_center = np.array([aux_center])\n",
-    "\n",
     "        centers = np.concatenate((centers, aux_center), axis=0)\n",
-    "        \n",
-    "        auxD.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
-    "        auxD.reset_index(drop=True, inplace=True)\n",
-    "    \n",
-    "    print(\"KS:\", len(centers))"
+    "        aux_D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
+    "        aux_D.reset_index(drop=True, inplace=True)\n",
+    "    print(\"KS:\", len(centers), centers)"
    ]
   },
   {
@@ -451,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
